--- a/www/login.html
+++ b/www/login.html
@@ -40,21 +40,21 @@
                     <h3>Login</h3>
                     <small class="login-help">
                         <i></i>
-                        Please enter your account gmail to login.
+                        Please enter your account YouTube to login.
                     </small>
                 </div>
             </div>
             <div class="login-gmail panel panel-filled">
                 <div class="panel-body ">
-                    <form action="index.html" id="loginForm" novalidate>
+                    <form action="#" id="loginForm" novalidate>
 
                         <div class=" form-group text-center">
-                            <div class="">
-                                <img src="images/YouTube.png" alt="" class="img-fluid">
+                            <div>
+                                <button class="btn btn-accent py-4 btn-login">Login with YouTobe
+                                    account
+                                </button>
                             </div>
-                            <span class="help-block small ">Your Gmail profile</span>
                         </div>
-
                     </form>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- App scripts -->
-<script src="scripts/luna.js"></script>
+
 
 </body>
 
