--- a/www/videos-stats.html
+++ b/www/videos-stats.html
@@ -26,47 +26,7 @@
 <body>
 <div class="container link-history-and-content-mt-0">
     <!-- Header-->
-    <nav class="main-header navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-2 logo-header">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">
-                            YouTube
-                            <span>Channels</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-1 col-xs-12 col-sm-3">
-                    <div id="navbar" class="navbar-collapse ">
-                        <ul class="nav navbar-nav ">
-                            <li class="">
-                                <a href="channels.html" class="text-uppercase">channels
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-1 col-xs-12 col-sm-3">
-                    <ul class="nav navbar-nav  ">
-                        <li class="">
-                            <a href="videos.html" class="text-uppercase">videos
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-7 col-xs-12 col-sm-3">
-                    <ul class="nav navbar-nav  navbar-right ">
-                        <li class="dropdown ">
-                            <a href="login.html" class=" text-uppercase">Logout
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-    </nav>
+    <div id="header"></div>
 
     <!--link history-->
     <div class="container ">
@@ -106,7 +66,7 @@
                                                         </h3>
                                                     </div>
                                                     <div class="col-lg-12">
-                                                        <div class="col-lg-2 pl-0">
+                                                        <div class="col-lg-2 ">
                                                             <h6 class="text-capitalize">views</h6>
 
                                                             <div class="col-12">
@@ -117,7 +77,7 @@
                                                             </div>
 
                                                         </div>
-                                                        <div class="col-lg-2 pl-0">
+                                                        <div class="col-lg-2 ">
                                                             <h6 class="text-capitalize">comments</h6>
 
                                                             <div class="col-12">
@@ -129,7 +89,7 @@
 
 
                                                         </div>
-                                                        <div class="col-lg-2 pl-0">
+                                                        <div class="col-lg-2 ">
                                                             <h6 class="text-capitalize">likes</h6>
 
                                                             <div class="col-12">
@@ -141,8 +101,8 @@
 
 
                                                         </div>
-                                                        <div class="col-lg-2 pl-0">
-                                                            <h6 class="text-capitalize">dislike</h6>
+                                                        <div class="col-lg-2 ">
+                                                            <h6 class="text-capitalize">dislikes</h6>
 
                                                             <div class="col-12">
                                                                 <strong class="c-white">422.444</strong>
@@ -153,7 +113,7 @@
 
 
                                                         </div>
-                                                        <div class="col-lg-2 pl-0">
+                                                        <div class="col-lg-2 ">
                                                             <h6 class="text-capitalize">avg view rate</h6>
 
                                                             <div class="col-12">
@@ -196,14 +156,14 @@
                     <div class="container">
                         <div class="col-lg-12 ">
                             <div class="row">
-                                <div class=" col-lg-6">
+                                <div class="col-lg-6">
                                     <div class="panel panel-filled">
                                         <div class="panel-body">
                                             <div class="row">
                                                 <div class="col-sm-6"><h5 class="m-t-xs">Views</h5></div>
                                             </div>
-                                            <div class="flot-chart-analytics">
-                                                <div class="flot-chart-content" id="metric1"></div>
+                                            <div class="graph">
+                                                <canvas  id="myChartVideosViews"></canvas>
                                             </div>
                                         </div>
                                     </div>
@@ -213,10 +173,9 @@
                                         <div class="panel-body">
                                             <div class="row">
                                                 <div class="col-sm-6"><h5 class="m-t-xs">Likes</h5></div>
-
                                             </div>
-                                            <div class="flot-chart-analytics">
-                                                <div class="flot-chart-content" id="metric2"></div>
+                                            <div class="graph">
+                                                <canvas  id="myChartVideosLikes"></canvas>
                                             </div>
                                         </div>
                                     </div>
@@ -231,8 +190,8 @@
                                             <div class="row">
                                                 <div class="col-sm-6"><h5 class="m-t-xs">Comments</h5></div>
                                             </div>
-                                            <div class="flot-chart-analytics">
-                                                <div class="flot-chart-content" id="metric3"></div>
+                                            <div class="graph">
+                                                <canvas  id="myChartVideosComments"></canvas>
                                             </div>
                                         </div>
                                     </div>
@@ -241,11 +200,11 @@
                                     <div class="panel panel-filled">
                                         <div class="panel-body">
                                             <div class="row">
-                                                <div class="col-sm-6"><h5 class="m-t-xs">Dislike</h5></div>
+                                                <div class="col-sm-6"><h5 class="m-t-xs">Dislikes</h5></div>
                                             </div>
-                                            <div class="flot-chart-analytics">
-                                                <div class="flot-chart-content" id="metric4"></div>
-                                            </div>
+                                            <div class="graph">
+                                                <canvas  id="myChartVideosDislikes"></canvas>
+                                            </div> 
                                         </div>
                                     </div>
                                 </div>
@@ -267,37 +226,49 @@
                                                     <table class="tableExample1 table table-striped">
                                                         <thead>
                                                         <tr>
-                                                            <th>Time</th>
+                                                            <th>Date</th>
                                                             <th>Views</th>
                                                             <th>Comments</th>
                                                             <th>Like</th>
-                                                            <th>Dislike</th>
+                                                            <th>Dislikes</th>
                                                         </tr>
                                                         </thead>
                                                         <tbody>
                                                         <tr>
-                                                            <td ><a href="date-stats.html"> 24.01.2000</a></td>
+                                                            <td>
+                                                                <div class="">
+                                                                    <a href="video-stats-day.html">2008/01/28</a></div>
+                                                            </td>
                                                             <td>323,222</td>
                                                             <td>1,663,222</td>
                                                             <td>4,222</td>
                                                             <td>691,222</td>
                                                         </tr>
                                                         <tr>
-                                                            <td ><a href="date-stats.html"> 24.01.2020</a></td>
+                                                            <td>
+                                                                <div class="">
+                                                                    <a href="video-stats-day.html">2007/09/22</a></div>
+                                                            </td>
                                                             <td>923,222</td>
                                                             <td>2,663,222</td>
                                                             <td>3,222</td>
                                                             <td>991,222</td>
                                                         </tr>
                                                         <tr>
-                                                            <td ><a href="date-stats.html"> 24.01.2002</a></td>
+                                                            <td>
+                                                                <div class="">
+                                                                    <a href="video-stats-day.html">2008/09/21</a></div>
+                                                            </td>
                                                             <td>223,222</td>
                                                             <td>3,663,222</td>
                                                             <td>2,222</td>
                                                             <td>391,222</td>
                                                         </tr>
                                                         <tr>
-                                                            <td ><a href="date-stats.html"> 24.01.2012</a></td>
+                                                            <td>
+                                                                <div class="">
+                                                                    <a href="video-stats-day.html">2008/09/26</a></div>
+                                                            </td>
                                                             <td>123,222</td>
                                                             <td>4,663,222</td>
                                                             <td>1,222</td>
@@ -316,14 +287,15 @@
                                     <div class="panel panel-filled">
                                         <div class="table-responsive pl-3">
 
-                                            <table  class="tableExample1 table ">
+                                            <table class="tableExample1 table ">
                                                 <thead>
                                                 <tr>
-                                                    <th>Date</th>
+                                                    <th></th>
                                                     <th>Views</th>
                                                     <th>Comments</th>
-                                                    <th>Like</th>
-                                                    <th>Dislike</th>
+                                                    <th>Likes</th>
+                                                    <th>Dislikes</th>
+
                                                 </tr>
                                                 </thead>
                                                 <tbody>
@@ -364,9 +336,145 @@
 <script src="vendor/flot/jquery.flot.resize.min.js"></script>
 <script src="vendor/flot/jquery.flot.spline.js"></script>
 <script src="vendor/datatables/datatables.min.js"></script>
+<script src="vendor/chart.js/dist/Chart.min.js"></script>
 
+<!--Custom js-->
 <script src="scripts/main.js"></script>
 
+<!--Graphs-->
+<script>
+    $(document).ready(function () {
+//Views
+        var ctxVideosViews = document.getElementById("myChartVideosViews").getContext('2d');
+        var myChartVideosViews = new Chart(ctxVideosViews, {
+            type: 'bar',
+            data: {
+                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                datasets: [{
+
+                    label: 'Views',
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    borderColor: "#d69121",
+                    backgroundColor: '#f9a921',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    xAxes: [{
+                        ticks: {
+                            fontColor: "#91949a"
+                        }
+
+                    }],
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true,
+                            fontColor: "#91949a"
+                        }
+                    }]
+                }
+            }
+        });
+
+//Likes
+        var ctxVideosLikes = document.getElementById("myChartVideosLikes").getContext('2d');
+        var myChartVideosLikes = new Chart(ctxVideosLikes, {
+            type: 'bar',
+            data: {
+                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                datasets: [{
+                    label: 'Likes',
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    borderColor: "#d69121",
+                    backgroundColor: '#f9a921',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    xAxes: [{
+                        ticks: {
+                            fontColor: "#91949a"
+                        }
+
+                    }],
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true,
+                            fontColor: "#91949a"
+                        }
+                    }]
+                }
+            }
+        });
+
+//Dislikes
+        var ctxVideosDislikes = document.getElementById("myChartVideosDislikes").getContext('2d');
+        var myChartVideosDislikes = new Chart(ctxVideosDislikes, {
+            type: 'bar',
+            data: {
+                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                datasets: [{
+                    label: 'Dislikes',
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    borderColor: "#d69121",
+                    backgroundColor: '#f9a921',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    xAxes: [{
+                        ticks: {
+                            fontColor: "#91949a"
+                        }
+
+                    }],
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true,
+                            fontColor: "#91949a"
+                        }
+                    }]
+                }
+            }
+        });
+
+//Comments
+        var ctxVideosComments = document.getElementById("myChartVideosComments").getContext('2d');
+        var myChartVideosComments = new Chart(ctxVideosComments, {
+            type: 'bar',
+            data: {
+                labels: [11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21,11.21],
+                datasets: [{
+                    label: "Comments",
+                    data: [15, 20, 30, 140, -30, 50, 60, -30, 50, 60,15, 20, 30, 140, -30, 50, 60, -30, 50, 60],
+                    borderColor: "#d69121",
+                    backgroundColor: '#f9a921',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    xAxes: [{
+                        ticks: {
+                            fontColor: "#91949a"
+                        }
+
+                    }],
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true,
+                            fontColor: "#91949a"
+                        }
+                    }]
+                }
+            }
+        });
+
+    });
+</script>
 
 </body>
 
