change btn delete, input checkbox, css

--- a/www/channels.html
+++ b/www/channels.html
@@ -31,10 +31,14 @@
 
     <section class="content">
         <div class="container-fluid">
-            <button class=" btn-hidden btn-warning btn text-capitalize affix mr-5 ">delete marked</button>
+
 
             <!--Channels-->
+
             <div class="row m-t-sm draggable-container">
+                <div class="col-12 text-right pb-3">
+                    <button class="btn-hidden btn-warning btn text-capitalize">delete marked</button>
+                </div>
                 <div class="col-12">
                     <div class="panel-sorting">
                         <div class="panel panel-filled">
@@ -134,7 +138,9 @@
                                                 </li>
 
                                             </ul>
-                                            <input type="checkbox" class="checkbox-delete btn-hidden"/>
+                                            <div class="">
+                                                <input type="checkbox" class="checkbox-delete btn-hidden"/>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -237,7 +243,9 @@
                                                 </li>
 
                                             </ul>
-                                            <input type="checkbox" class="checkbox-delete btn-hidden"/>
+                                            <div class="">
+                                                <input type="checkbox" class="checkbox-delete btn-hidden"/>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -340,7 +348,9 @@
                                                 </li>
 
                                             </ul>
-                                            <input type="checkbox" class="checkbox-delete btn-hidden"/>
+                                            <div class="">
+                                                <input type="checkbox" class="checkbox-delete btn-hidden"/>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -384,6 +394,9 @@
 
                     </div>
                 </div>
+                <div class="col-12 text-right pt-3">
+                    <button class="btn-hidden btn-warning btn text-capitalize">delete marked</button>
+                </div>
             </div>
         </div>
     </section>
@@ -397,7 +410,6 @@
 <script src="vendor/flot/jquery.flot.resize.min.js"></script>
 <script src="vendor/flot/jquery.flot.spline.js"></script>
 <script src="vendor/jquery-ui/jquery-ui.min.js"></script>
-
 
 
 <!--Custom JS-->
